# managed-permissions-drift-catalog

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  update.yml
data/latest/: azure-built-in-roles.json  github-actions-default-workflow-settings.json  github-fgpat-permissions.json  github-token-permissions.json
data/reverse-index/: azure-built-in-roles.json  github-actions-default-workflow-settings.json  github-fgpat-permissions.json  github-token-permissions.json
data/runs/: 2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json
data/summaries/: 2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json
docs/: index.md
docs/daily/: 2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  (+11 more)
tests/: conftest.py  test_aws_source.py  test_azure_source.py  test_diffing.py  test_gcp_source.py  test_github_source.py  test_http.py  test_render.py  test_reverse_index_query.py  test_scoring.py
(+3884 files in other folders)
