[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "managed-permissions-drift-catalog"
version = "0.1.0"
description = "Daily drift tracking for managed permissions across AWS, Azure, GCP, and GitHub."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "lxml>=5,<6",
  "PyYAML>=6,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]

